[package]
name = "philharmonic-connector-impl-sql-postgres"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/philharmonic-connector-impl-sql-postgres"
description = "PostgreSQL connector implementation for Philharmonic (sql_query capability)."

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
philharmonic-connector-common = "0.2"
philharmonic-connector-impl-api = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-aws-lc-rs", "json", "chrono", "uuid", "bigdecimal"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[dev-dependencies]
dockerlet = "0.1"
# `serial_test::file_serial(key = "docker")` serializes
# Docker-backed integration tests across test crates so
# that spinning up multiple Postgres containers in parallel
# doesn't OOM the host. Works cross-process via a lockfile,
# which is what cargo test's "each tests/*.rs is its own
# binary" execution model needs.
serial_test = { version = "3", features = ["file_locks"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "test-util"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
